@@ -1,3 +1,5 @@
+2006/6/8 -- released version 20060608_trunk
+
 2006/6/7 -- released version 20060607_trunk
 
 2006/6/6 -- released version 20060606_trunk
